--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node index.js",
-    "build":"npm i"
+    "dev": "nodemon index.js",
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "nodemon": "^3.1.0"
   }
 }
